--- a/templates/register.html
+++ b/templates/register.html
@@ -41,9 +41,10 @@
                 <label for="state" class="form-label">State</label>
                 <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Select a State</button>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+
+                    {% for state in states %}
+                        <li><a class="dropdown-item" href="#">{{ state }}</a></li>
+                    {% endfor %}
                 </ul>
             </div>
             <div class="mb-3">
