--- a/templates/admin_view_users.html
+++ b/templates/admin_view_users.html
@@ -4,18 +4,28 @@
     <h3>User Management</h3>
     {% if not users %}
     <p>No users found.</p>
-    {% else %}
+    <table>
+        <tr>
+            <th>Username</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Email</th>
+            <th>Role</th>
+            <th>Actions</th>
+        </tr>
         {% for user in users %}
-            <div class="user-card">
-                <h4>{{ user.username }}</h4>
-                <p>First Name: {{ user.firstname }}</p>
-                <p>Last Name: {{ user.lastname }}</p>
-                <p>Username: {{ user.username }}</p>
-                <p>Email: {{ user.email }}</p>
-                <p>Role: {{ user.role }}</p>
+        <tr>
+            <td>{{ user.username }}</td>
+            <td>{{ user.firstname }}</td>
+            <td>{{ user.lastname }}</td>
+            <td>{{ user.email }}</td>
+            <td>{{ user.role }}</td>
+            <td>
                 <button onclick="EditUser('{{ user.id }}')">Edit</button>
                 <button onclick="DeleteUser('{{ user.id }}')">Delete</button>
-            </div>
+            </td>
+        </tr>
         {% endfor %}
+    </table>
     {% endif %}
 {% endblock %}
