--- a/templates/register.html
+++ b/templates/register.html
@@ -39,14 +39,14 @@
             </div>
             <div class="dropdown">
                 <label for="state" class="form-label">State</label>
-                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">Select a State</button>
-                <ul class="dropdown-menu">
-
+                <select class="form-select" id="state" name="state" required>
+                    <option value="" disabled selected>Select your state</option>
                     {% for state in states %}
-                        <li><a class="dropdown-item" href="#">{{ state }}</a></li>
+                        <option value="{{ state.state_code }}">{{ state.state_code }}</option>
                     {% endfor %}
-                </ul>
+                </select>
             </div>
+            <br />
             <div class="mb-3">
                 <label for="zip" class="form-label">Zip Code</label>
                 <input type="text" class="form-control" id="zip" name="zip" required>
